fixed wave contrast error on apply page

--- a/style.css
+++ b/style.css
@@ -489,8 +489,8 @@ input[type="text"], input[type="email"], select, textarea {
     justify-content: center;
     min-width: 20%;
     max-width: 100%;
-    font-size: 200%;
-    color: rgb(255, 255, 255);
+    font-size: 300%;
+    color: rgb(0, 0, 0);
     border-radius: 10px;
 }
 #textarea-other-skills {
